# we-will-win

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/ml_service/core_api/: application.py  main.py  schemas.py  service_provider.py
backend/ml_service/shared/services/: base_transformer.py  real_transformer.py
backend/ml_service/shared/types/: core_response_types.py
backend/tests/: conftest.py
backend/tests/core_api/: conftest.py  test_delay.py
